[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/EuropeFlags v2.png" type="Texture" id=1]
[ext_resource path="res://src/first screen/First_screen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.65098, 0.54902, 0.415686, 1 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 160, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 16 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = -75282.0
margin_top = -34808.0
margin_right = 78023.0
margin_bottom = 36271.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -128.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="UK" type="TextureButton" parent="HBoxContainer"]
margin_left = 782.0
margin_right = 1038.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
texture_normal = SubResource( 1 )
expand = true

[node name="ES" type="TextureButton" parent="HBoxContainer"]
margin_left = 1042.0
margin_right = 1298.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
texture_normal = SubResource( 4 )
expand = true

[node name="CS" type="TextureButton" parent="HBoxContainer"]
margin_left = 1302.0
margin_right = 1558.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
texture_normal = SubResource( 3 )
expand = true

[connection signal="pressed" from="HBoxContainer/UK" to="." method="_on_UK_pressed"]
[connection signal="pressed" from="HBoxContainer/ES" to="." method="_on_ES_pressed"]
[connection signal="pressed" from="HBoxContainer/CS" to="." method="_on_CS_pressed"]
